# RPG-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md
cmake/: CommonFcns.cmake  Finddoctest.cmake  Packing.cmake
dicesLibrary/: CMakeLists.txt  Dice.cpp  Dice.ixx  Dice.test.cpp  DiceSet.test.cpp
install/include/randomNumberEngine/: GeneratorsPredefined.hpp
install/lib/cmake/RPGEngine/: RPGEngineConfig.cmake  RPGEngineConfigVersion.cmake  RPGEngineTargets-release.cmake  RPGEngineTargets.cmake
playground/: CMakeLists.txt  foo.ixx  foo.test.cpp
randEngine/: .CMakeLists.txt.swp  CMakeLists.txt  GeneratorsPredefined.cpp  GeneratorsPredefined.ixx  GeneratorsPredefined.test.cpp  GeneratorsPredefined.tpp  IGenerator.ixx  IGenerator.tpp
randEngine/include/: GeneratorsPredefined.hpp  IGenerator.h  IGenerator.hpp
