include(CommonFcns)

set(LIB_NAME randomNumberEngine)
set(TESTS_EXEC ${LIB_NAME}_test)
#set(HEADER_FILES "")
#set(TEMPLATE_FILES "IGenerator.tpp" "GeneratorsPredefined.tpp")
#set(SOURCE_FILES "GeneratorsPredefined.cpp")
set(TEST_FILES "GeneratorsPredefined.test.cpp")
set(MODULE_FILES "IGenerator.ixx" "GeneratorsPredefined.ixx")
add_library(${LIB_NAME})
target_sources(${LIB_NAME} PUBLIC FILE_SET CXX_MODULES FILES ${MODULE_FILES})

add_executable(${TESTS_EXEC})# ${TEST_FILES})
target_sources(${TESTS_EXEC} PUBLIC FILE_SET CXX_MODULES FILES ${TEST_FILES})
target_link_libraries(${TESTS_EXEC} ${LIB_NAME} GTest::gtest GTest::gtest_main)
gtest_discover_tests(${TESTS_EXEC})
#if(ALL_TEST_FILES)
#	list(APPEND ALL_TEST_FILES ${TEST_FILES})
#endif()
#set(PUBLIC_HEADER_LIST ${TEMPLATE_FILES})
#MD_ADD_AND_SETUP_LIB(STATIC)
#MD_ADD_AND_SETUP_GTESTS(${LIB_NAME})
MD_INSTALL()
